// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Grid Container Fluid width container 1`] = `
<div
  className="gc-grid-container sc-EHOje htarYD"
  type="fluid"
>
  <div
    className="gc-grid-x sc-gzVnrw nYoQq"
    wrap={true}
  >
    <div
      className="gc-cell sc-bZQynM jRIVqo"
    >
      cell
    </div>
    <div
      className="gc-cell sc-bZQynM jRIVqo"
    >
      cell
    </div>
    <div
      className="gc-cell sc-bZQynM jRIVqo"
    >
      cell
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Container Full width container 1`] = `
<div
  className="gc-grid-container sc-EHOje fdpVwb"
  type="full"
>
  <div
    className="gc-grid-x sc-gzVnrw nYoQq"
    wrap={true}
  >
    <div
      className="gc-cell sc-bZQynM jRIVqo"
    >
      cell
    </div>
    <div
      className="gc-cell sc-bZQynM jRIVqo"
    >
      cell
    </div>
    <div
      className="gc-cell sc-bZQynM jRIVqo"
    >
      cell
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Container Width of the available space container 1`] = `
<div
  className="gc-grid-container sc-EHOje IuOaT"
>
  <div
    className="gc-grid-x sc-gzVnrw nYoQq"
    wrap={true}
  >
    <div
      className="gc-cell sc-bZQynM jRIVqo"
    >
      cell
    </div>
    <div
      className="gc-cell sc-bZQynM jRIVqo"
    >
      cell
    </div>
    <div
      className="gc-cell sc-bZQynM jRIVqo"
    >
      cell
    </div>
  </div>
</div>
`;
